src/style/index.css
@import url("vars.css");
@import url("toast.css");
@import url("tooltip.css");
@import url("scrollbar.css");

:root {
  font-size: var(--page-font-size);
}

* {
  box-sizing: border-box;
  font-size: 1rem;
  margin: 0;
  padding: 0;
  border: 0;
  opacity: 1;
  background: transparent;
  color: inherit;
}

body {
  display: grid;
  grid-template-columns: calc(100vw - var(--bookmark-width)) var(--bookmark-width);
  grid-template-rows: auto;
  grid-template-areas: "main sidebar";
  height: 100vh;
  width: 100vw;
  background: var(--bg-mid);
  color: var(--fg-mid);
  font-family: var(--page-font);
  overflow: hidden;
}

main {
  grid-area: main;
  overflow: auto;
}

.heatmap {
  background-color: rgb(0, 0, 255);
}

.heatmapLegend>p {
  display: flex;
  align-items: center;
  text-align: center;
}

.heatmapLegend {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(5, 1fr);
  column-gap: 5px;
}

#redHsl {
  background-color: hsl(0, 100%, 50%);
}

#yellowHsl {
  background-color: hsl(60, 100%, 50%);
}

#greenHsl {
  background-color: hsl(120, 100%, 50%);
}

#cyanHsl {
  background-color: hsl(180, 100%, 50%);
}

#blueHsl {
  background-color: hsl(240, 100%, 50%);
}

.blur {
  visibility: hidden;
}

#sidebar {
  grid-area: sidebar;
  overflow: hidden;
  display: flex;
  flex-direction: column;
}

#sidebar * {
  user-select: none;
}

main>section,
#sidebar {
  padding: var(--small);
}

#sidebar section {
  flex-direction: column;
}

#bookmarks {
  flex-grow: 1;
  overflow: hidden;
  border-radius: var(--medium);
}

#bookmarksnav {
  flex-direction: column;
  flex-grow: 1;
  overflow: auto;
}

#toolbar {
  flex-grow: 0;
}

#toolbar nav {
  display: flex;
  align-items: stretch;
  flex-direction: column;
  flex: 1 1 auto;
}

#toolbar a {
  flex-grow: 1;
  cursor: pointer;
  padding: var(--small);
  margin: var(--small);
  background-color: var(--overlay-dark);
  border-radius: var(--tiny);
  min-height: var(--button-min-height);
  text-decoration: none;
}

#toolbar a#bin {
  min-height: 8rem;
}

#toolbar[disabled],
[disabled] h1,
[disabled] a:not(.edited) {
  filter: opacity(0.5) blur(1px);
  cursor: not-allowed !important;
}

.flash {
  animation: sparkle 1s linear;
}

@keyframes sparkle {
  60% {
    filter: invert(0%)
  }

  70% {
    filter: invert(100%)
  }

  80% {
    filter: invert(0%)
  }
}

/* wiggle animation */
@keyframes wiggle {
  0% {
    transform: rotate(0deg);
  }

  10% {
    transform: translate(1px, 1px)
  }

  20% {
    transform: translate(-1px, -2px)
  }

  30% {
    transform: translate(-3px, 0px)
  }

  40% {
    transform: translate(3px, 2px)
  }

  50% {
    transform: translate(1px, -1px)
  }

  60% {
    transform: translate(-1px, 2px)
  }

  70% {
    transform: translate(-3px, 1px)
  }

  80% {
    transform: translate(3px, 1px)
  }

  90% {
    transform: translate(-1px, -1px)
  }

  100% {
    transform: rotate(0deg);
  }
}

.wiggle {
  animation: wiggle 0.5s linear;
}

#edit {
  grid-area: edit;
  height: 0em;
  display: none;
  z-index: 2000;
}

dialog::backdrop {
  background: rgba(66, 66, 66, 0.5);
}

dialog {
  display: flex;
  overflow: visible;
  flex-direction: column;
}

dialog>* {
  flex: 1 1 auto;
  padding: 1rem;
}


dialog {
  align-items: left;
  align-content: stretch;
}

dialog * {
  padding: var(--medium);
  flex-grow: 0;
  display: flex;
}

dialog input {
  background: var(--bg-light);
  color: var(--fg-dark);
}


dialog input[type=string] {
  flex-grow: 1;
  height: 2rem;
  min-width: 30rem;
}

dialog input[type=color] {
  padding: 0;
  flex-grow: 1;
  height: 2rem;
}


dialog textarea {
  background: var(--bg-light);
  color: var(--fg-dark);
  flex-grow: 1;
  min-height: 8rem;
  min-width: 30rem;
}

dialog #okcancel {
  flex-direction: row-reverse;
}

dialog button {
  padding: var(--large);
  margin: var(--large);
  background: var(--bg-dark);
  border-radius: var(--medium);
  width: 10rem;
}

dialog label h2 {
  width: 10rem;
}

section>h1 {
  flex-grow: 0;
}

section.hide>h1 {
  text-orientation: sideways;
  writing-mode: horizontal-tb;
  transform: rotate(0deg);
}

section>nav {
  display: flex;
  flex: 1 1 auto;
  background: transparent;
}

section>nav:empty {
  border: #fff dashed thin;
  min-height: 2em;
}


section.hide nav {
  display: none;
}


main>section>nav,
main>section {
  flex-wrap: nowrap;
  margin: var(--medium);
}

section>nav>ul {
  padding: 1em;
  margin-left: 2em;
}

section>nav>p {
  padding: 1em;
}

section {
  display: flex;
  flex: 1 1 auto;
  align-items: stretch;
  align-content: flex-start;
  background: var(--overlay-dark);
  border: solid thin var(--fg-light-alpha);
  flex-direction: row;
  margin: var(--medium);
  padding: var(--small);
  border-radius: var(--medium);
}

section section {
  flex-direction: column;
  border-radius: var(--small);
  width: min-content;
}

section>sst-panel::part(panel) {
  flex-direction: column;
  border-radius: var(--small);
}

section>sst-panel[folded]::part(panel) {
  width: min-content;
}

section.vertical nav {
  flex-direction: column;
}

section.vertical section {
  width: auto;
}

.flex-disabled nav {
  flex-wrap: nowrap;
}

section section nav {
  flex-wrap: wrap;
}

.switch input {
  position: absolute !important;
  width: 0.0625em;
}

.switch {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 79%;
}

.switch label {
  text-align: center;
  padding: 0.5em 1em;
  margin-right: -0.0625em;
  border: 0.0625em solid rgba(0, 0, 0, 0.2);
}

.switch input:checked+label {
  background-color: #d3d3d3;
  box-shadow: none;
  color: black;
}

#radioHorizontal+label {
  border-radius: 0.25em 0 0 0.25em;
}

#radioVertical+label {
  border-radius: 0 0.25em 0.25em 0;
}

main * section.folded,
main>section>h1 {
  text-orientation: sideways-right;
  writing-mode: vertical-lr;
  transform: rotate(-180deg);
  text-align: end;
  flex-grow: 0 !important;
}

main>sst-panel::part(header) {
  text-orientation: sideways-right;
  writing-mode: vertical-lr;
  transform: rotate(-180deg);
  text-align: end;
  flex-grow: 0 !important;
}

main>sst-panel[folded]::part(header) {
  text-orientation: unset;
  writing-mode: unset;
  transform: unset;
  text-align: unset;
  flex-direction: row-reverse;
}

main section.folded>h1 {
  text-orientation: unset;
  writing-mode: unset;
  transform: unset;
  text-align: unset;
  flex-direction: row-reverse;
}


h1,
h2,
main a {
  border: 0.125rem solid transparent;
  padding: 0.05rem;
  margin-top: var(--small);
  background: transparent;
}

a,
main a {
  display: flex;
  align-items: center;
  background: var(--overlay-mid);
  border: solid transparent thin;
  border-radius: var(--tiny);
  justify-content: center;
  margin: var(--tiny);
  padding: var(--medium);
  min-height: 1.5rem;
  text-align: center;
  text-decoration: none;
  overflow: hidden;
  flex-grow: 1;
  cursor: pointer;
}

#bookmarksnav a {
  flex-grow: 0;
  flex-shrink: 0;
}

#bookmarksnav a.fresh {
  background: var(--fresh);
}


a:focus {
  background: rgba(0, 0, 0, 0.4);
  color: #fff;
  box-shadow: 0 0 calc(var(--small) * 4) calc(var(--small) * 2) var(--overlay-light);
  outline: none;
}

a:hover {
  border-color: var(--fg-light);
}

a:active {
  transform: scale(0.95);
}


a.metamouseover:not(.dragging),
main.editing a:hover:not(.dragging) {
  cursor: move;
}

#statuswrapper {
  position: relative;
  padding: 0;
  margin: 0;
  height: 3em;
  overflow: hidden;
  flex: 1 1 auto;
  background: var(--bg-mid);
}

#status {
  position: absolute;
  bottom: 0rem;
  flex-grow: 1;
  flex-shrink: 0;
  display: flex;
  flex-direction: column;
  height: auto;
  width: 100%;
  padding: 1rem;
  margin: 0;
  background: var(--bg-mid);
}

#status p {
  flex-shrink: 0;
  padding: 1rem;
  height: 1rem;
  background: var(--bg-mid);
}

#statuswrapper:hover {
  height: auto;
  overflow: visible;
}


.folded *:not(:first-child) {
  display: none;
}


#trash {
  display: none;
  background: var(--overlay-dark);
}

#trash nav {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
}

#trash.open {
  display: flex;
}

#trash.folded *:not(:first-child) {
  display: none;
}

#bin.over {
  background: var(--bg-drop);
  color: var(--fg-drop);
}


.drophere {
  opacity: 1;
}

.dragging {
  transition: all 1s linear;
  background: var(--bg-drop);
  color: var(--fg-drop);
  border-color: var(--fg-drop);
  border-style: solid;
}

footer {
  background: var(--bg-light);
}

.favicon {
  width: 1rem;
  height: 1rem;
  flex-shrink: 0;
  margin-right: var(--small);
}

.new {
  cursor: copy;
}

.highlight {
  animation: highlight 3s;
}

@keyframes highlight {
  0% {
    background: var(--overlay-mid);
  }

  10% {
    background: var(--bg-highlight);
  }

  20% {
    background: var(--overlay-mid);
  }

  30% {
    background: var(--bg-highlight);
  }

  40% {
    background: var(--overlay-mid);
  }

  50% {
    background: var(--bg-highlight);
  }

  60% {
    background: var(--overlay-mid);
  }

  70% {
    background: var(--bg-highlight);
  }

  100% {
    background: var(--overlay-mid);
  }
}

@keyframes spin-animation {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

.spin {
  animation: spin-animation 1s infinite linear;
}

dialog {
  background: var(--bg-mid);
  color: var(--fg-mid);
  margin: auto;
  padding: var(--large);
  box-shadow: 0 var(--medium) var(--large) var(--fg-mid);
  border-radius: var(--medium);
}

color-switch {
  padding: 0;
  flex-grow: 1;
}

section.extra-action {
  flex: unset;
}

section.extra-action a {
  margin: .5em;
}

#mergeConflictResolver {
  display: none;
}

edit-window {
  position: absolute;
}

